feat: 메뉴판에 없는 메뉴가 있으면 예외 처리 기능 구현